WIP Member page.  Roughed in timeline of for transaction history

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -125,3 +125,54 @@
 <div class="row">
   <h3 class="col-md-12" style="padding-top:0;margin-top:0;">Recent Transaction Activity</h3>  
 </div>
+
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+<div class="timeline-centered">
+
+  <article class="timeline-entry">   
+    <div class="timeline-entry-inner">      
+      <div class="timeline-icon bg-success">
+        <i class="fa fa-lock"></i>
+      </div>      
+      <div class="timeline-label">
+        <h2><a href="#">Art Ramadani</a> <span>posted a status update</span></h2>
+      </div>
+    </div>
+  </article>
+  
+  
+  <article class="timeline-entry">    
+    <div class="timeline-entry-inner">      
+      <div class="timeline-icon bg-secondary">
+        <i class="entypo-suitcase"></i>
+      </div>      
+      <div class="timeline-label">
+        <h2><a href="#">Job Meeting</a></h2>
+      </div>
+    </div>    
+  </article>
+  
+  <article class="timeline-entry">    
+    <div class="timeline-entry-inner">
+      <div class="timeline-icon bg-warning">
+        <i class="entypo-camera"></i>
+      </div>
+      <div class="timeline-label">
+        <h2><a href="#">Arber Nushi</a> <span>changed his</span> <a href="#">Profile Picture</a></h2>        
+      </div>
+    </div>
+  </article>
+  
+  <article class="timeline-entry begin">
+    <div class="timeline-entry-inner">
+      <div class="timeline-icon" style="-webkit-transform: rotate(-90deg); -moz-transform: rotate(-90deg);">
+        <i class="entypo-flight"></i> +
+      </div>
+    </div>
+  </article>
+  
+</div>
+
+</div>
+</div>
