--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -147,7 +147,7 @@
                 <i class="fa <%= timeline_icon(history_item) -%>"></i>
               </div>      
               <div class="timeline-label">
-                <h2><a href="#">Art Ramadani</a> <span>posted a status update</span></h2>
+                <%= render partial: item_type_description(history_item).downcase, locals: {history_item: history_item} -%>
               </div>
             </div>
           </article>
