--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -12,10 +12,10 @@
       <div class="col-md-2 col-xs-6 text-center" style="margin-bottom:10px;">
         <div class="well" style="padding:12px;background:#FFF;border:0;">
           <img class="img-thumbnail" style="margin-bottom:10px;" src="<%= member.gravatar_url(:size =>80, :rating => 'G', :secure => true, :default => 'identicon') -%>"/><br/>
-          <a href="<%= space_member_path(@space, member)%>"> 
-            <%= member.name %><br/>
-            <%= member.email %><br/>
-          </a>
+          <%= member.name %><br/>
+          <%= member.email %><br/>
+          <br/>
+          <a href="<%= space_member_path(@space, member)%>" class="btn btn-primary">View</a>
         </div>
       </div>
       
