--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,64 +1,67 @@
-<div class="row panel" style="padding-bottom:15px;">
+<div class="row">
 
-<div class="col-md-5">
-  <h2>Current Managers</h2>
-  
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Email</th>
-        <th colspan="1"></th>
-      </tr>
-    </thead>
+  <div class="col-md-8">
+    <h5>Current Managers</h5>
     
-    <tbody>
-      <% @admins.each do |admin| %>
+    <table class="table">
+      <thead>
         <tr>
-          <td><%= admin.email %> <%= admin_relationship(admin, @space) -%></td>
-          <td class="command-bar"><%= link_to_unless (admin.id == current_user.id || admin.id == @space.user_id), 'Delete', space_admin_url(@space, admin), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th>Email</th>
+          <th colspan="1"></th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      
+      <tbody>
+        <% @admins.each do |admin| %>
+          <tr>
+            <td><%= admin.email %> <%= admin_relationship(admin, @space) -%></td>
+            <td class="command-bar"><%= link_to_unless (admin.id == current_user.id || admin.id == @space.user_id), 'Delete', space_admin_url(@space, admin), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
 
-<div class="col-md-7">
-  <h2>People invited to co-manage</h2>
-  <table class="table" style="margin-bottom:25px;">
-    <thead>
-      <tr>
-        <th>Sent To</th>
-        <th>Sent By</th>
-        <th colspan="2"></th>
-      </tr>
-    </thead>
-    
-    <tbody>
-      <% @invites.each do |invite| %>
+<div class="row">
+
+  <div class="col-md-8">
+    <h5>People invited to co-manage</h5>
+    <table class="table" style="margin-bottom:25px;">
+      <thead>
         <tr>
-          <td><%= invite.email %></td>
-          <td><%= invite.sender.email %></td>
-          <td class="command-bar"><%= link_to 'Resend', resend_space_invite_path(@space, invite) %></td>
-          <td class="command-bar"><%= link_to 'Delete', [@space, invite], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <th>Sent To</th>
+          <th>Sent By</th>
+          <th colspan="2"></th>
         </tr>
-      <% end %>
-
-      <% if @invites.empty? -%>
-        <tr><td class="text-center" colspan="4"><i>There are no pending invites.</td></tr>
-      <% end -%>
-
-    </tbody>
-  </table>
-  
-  <%= form_for [@space, @invite], html: {class: "form-inline", role: "form"} do |f| %>
-    <div class="form-group" style="width:270px;">
-      <div class="input-group">
-        <div class="input-group-addon">@</div>
-        <%= f.email_field :email, class: "form-control", placeholder: "Enter email", style: "width:225px;" %>
+      </thead>
+      
+      <tbody>
+        <% @invites.each do |invite| %>
+          <tr>
+            <td><%= invite.email %></td>
+            <td><%= invite.sender.email %></td>
+            <td class="command-bar"><%= link_to 'Resend', resend_space_invite_path(@space, invite) %></td>
+            <td class="command-bar"><%= link_to 'Delete', [@space, invite], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+        
+        <% if @invites.empty? -%>
+          <tr><td class="text-center" colspan="4"><i>There are no pending invites.</td></tr>
+        <% end -%>
+        
+      </tbody>
+    </table>
+    
+    <%= form_for [@space, @invite], html: {class: "form-inline", role: "form"} do |f| %>
+      <div class="form-group" style="width:270px;">
+        <div class="input-group">
+          <div class="input-group-addon">@</div>
+          <%= f.email_field :email, class: "form-control", placeholder: "Enter email", style: "width:225px;" %>
+        </div>
       </div>
-    </div>
-    <%= f.submit 'Send Invite', class: "btn btn-primary" %>
-  <% end %>
-</div>
+      <%= f.submit 'Send Invite', class: "btn btn-primary" %>
+    <% end %>
+  </div>
 
 </div>
