--- a/app/views/invoices/new.html.haml
+++ b/app/views/invoices/new.html.haml
@@ -1,13 +1,17 @@
 .col-md-6.col-md-offset-3
   = form_for(@invoice, url: space_member_invoices_path(@space, @member, @invoice)) do |f| 
-    .col-md-8{style: "padding-left:0;"}
-      %h3
+    .col-md-7{style: "padding-left:0;padding-top:20px;"}
+      %h4
         Invoice for
         = @member.name
-    .form-group{:class => "#{has_error(@invoice, :due_date)} col-md-4", style: "padding-right:0;"}
+    .form-group{:class => "#{has_error(@invoice, :due_date)} col-md-5" , style: "padding-right:0;"}
       = f.label :due_date
       = f.date_field :due_date, class: "form-control"
       = field_errors(@invoice, :due_date)
+    .form-group{:class => "#{has_error(@invoice, :description)}", style: "padding-left:0;"}
+      = f.label :description, "Summary"
+      = f.text_field :description, class: "form-control"
+      = field_errors(@invoice, :description)
     .form-group
       %label{class: "col-md-8", style: "padding-left:0;padding-right:5px;margin-bottom:5px;"} Description
       %label{class: "col-md-2", style: "padding-left:0;padding-right:5px;margin-bottom:5px;"} Tax $
