--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  * require_tree . #Not a good idea with this theme
  *
- *= require bootstrap
+ *= require custom-bootstrap
  *= stub active_admin
  *= require_self
  */
