--- a/app/assets/stylesheets/custom-bootstrap.css
+++ b/app/assets/stylesheets/custom-bootstrap.css
@@ -1,6 +1,6 @@
 @import url("//fonts.googleapis.com/css?family=Roboto:400,500");
-@import url("http://fonts.googleapis.com/css?family=Montserrat:400,700");
-@import url("http://fonts.googleapis.com/css?family=Noto+Sans:400,700");
+@import url("//fonts.googleapis.com/css?family=Montserrat:400,700");
+@import url("//fonts.googleapis.com/css?family=Noto+Sans:400,700");
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -6761,12 +6761,15 @@ input:focus,
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 span {
   color: #3e3f3a;
 }
-.login-page-container {
-  height: 100%;
+body.sessions.new,
+body.registrations.new {
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
-  background: url("/img/login_bg.jpg");
+  background: url("/img/login_bg.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 .login-container {
