--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     = csrf_meta_tags
     %link{href: "//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel: "stylesheet"}
 
-  %body{style: "background-color:#ffffff;padding-bottom:15px;"}
+  %body{class: controller_name + " " + action_name}
 
     - if user_signed_in?
       = render 'shared/main_nav'
