--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -1,34 +1,32 @@
-.login-container.col-md-4.col-md-offset-4
-  .login-header.login-caret{style: "margin-top:45px;margin-bottom:35px;"}
-    .login-content.text-center
-      %a.logo{href: "index.html"}
-        =image_tag "/img/Dovetail_v2_logo.png", width: '50'
-      %p.lead Create an account, it's free<br/>and takes few moments only!
-  .login-form
-    .login-content
+/ BEGIN LOGIN WINDOW
+.login-container
+  .container-fluid
+    .row-fluid
+      .col-md-12.text-center
+        %img{:height => "60px", :src => "../img/logo-w.png"}/
+    .row-fluid
+      .col-md-12.greeting
+        Create Your Account.
+    .row-fluid
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
         = f.hidden_field :invite_token, value: (params[:invite_token] || (params[:user] ? params[:user][:invite_token] : nil))
-        .form-steps
-          #step-1.step.current
-            .form-group
-              .input-group
-                .input-group-addon
-                  %i.fa.fa-envelope
-                = f.email_field :email, autofocus: true, class: "form-control", id: "email", placeholder: "Enter you email address"
-            .form-group
-              .input-group
-                .input-group-addon
-                  %i.fa.fa-lock
-                = f.password_field :password, autocomplete: "off", class: "form-control", id: "password", placeholder: "Enter your password"
-            .form-group
-              .input-group
-                .input-group-addon
-                  %i.fa.fa-lock
-                = f.password_field :password_confirmation, autocomplete: "off", class: "form-control", id: "password", placeholder: "Confirm your password"
-            .form-group
-              %button.btn.btn-success.btn-block.btn-login#submit_form{type: "submit"}
-                %i.entypo-right-open-mini
-                Create Account
-        .login-bottom-links.text-center
-          = link_to "Already have an account? Sign in here.", "/users/sign_in", class: "link"
+        .form-group
+          .col-md-12
+            = f.text_field :full_name, autofocus: true, class: "form-control", id: "full_name", placeholder: "Enter your name"
+        .form-group
+          .col-md-12
+            = f.email_field :email, class: "form-control", id: "email", placeholder: "Enter your email address"
+        .form-group
+          .col-md-12
+            = f.password_field :password, autocomplete: "off", class: "form-control", id: "password", placeholder: "Enter your password"
+        .form-group
+          .col-md-12
+            = f.password_field :password_confirmation, autocomplete: "off", class: "form-control", id: "password", placeholder: "Confirm your password"
+        .row-fluid.text-center
+          .col-md-12
+            %button.btn.btn-warning.btn-block.btn-login#submit_form{type: "submit"}
+              Create Account
+          .col-md-12
+            = link_to "Have an account already?", new_user_session_path, class: "forgot-password"
+  / /END LOGIN WINDOW
