--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
     .container
 
 
-      .main-content{style: "margin-top:20px;"}
+      .main-content
 
         = render 'shared/need_payment_method'
 
